# machine-designs-machine

./: .gitignore  .gitmodules  AGENTS.md  pyproject.toml
core/dpi/: npc_memory_dpi.cpp  npc_memory_dpi.h
core/rtl/: npc_alu.v  npc_axi_master.v  npc_branch.v  npc_clint.v  npc_core.v  npc_csr_file.v  npc_decoder.v  npc_defines.vh  npc_icache.v  npc_imm.v  npc_load_store_unit.v  npc_memory_dpi.v  npc_pipeline.v  npc_regfile.v  npc_single_cycle.v
core/tb/: npc_core_tb.cpp
emulator/: ARCHITECTURE.md  CMakeLists.txt  README.md  WORKLOADS.md
emulator/include/emulator/: clint.h  commit.h  common.h  config.h  decoder.h  difftest.h  emulator_iss.h  hart.h  iss.h  memory.h  rtl_iss.h  shell.h  trace.h  uart.h
emulator/src/: clint.cpp  config.cpp  decoder.cpp  difftest.cpp  difftest_main.cpp  emulator_iss.cpp  hart.cpp  main.cpp  memory.cpp  rtl_iss.cpp  shell.cpp  trace.cpp  uart.cpp
emulator/tests/: CMakeLists.txt  test_main.cpp
notes/: core-design.md  difftest-design.md  emulator-debugging.md  emulator-design.md  instruction-list.md  plan.md  rtthread-am-port.md  todo.md
skills/semantic-search/: SKILL.md
skills/workload-build/: SKILL.md  build.sh  crt0.S  link.ld
specs/: clint.rst  core.md  difftest.md  emulator.md  skills.md
specs/abstract-machine/: README.md  kilb.md  overview.md  specifications.md
tools/semantic-search/: README.md  chunking.py  client.py  index.py  pyproject.toml  search.py
workloads/abstract-machine/: Makefile
workloads/abstract-machine/am/include/arch/: riscv.h
workloads/abstract-machine/am/src/native/: platform.c
workloads/abstract-machine/am/src/riscv/npc/: cte.c  ioe.c  mpe.c  timer.c  trap.S  trm.c
workloads/abstract-machine/klib/include/: klib.h  stdio.h  stdlib.h  string.h
workloads/abstract-machine/klib/src/: stdio.c  stdlib.c  string.c
workloads/abstract-machine/scripts/: linker.ld  riscv32e-npc.mk
workloads/abstract-machine/scripts/isa/: riscv.mk
workloads/abstract-machine/scripts/platform/: npc.mk
workloads/asm/uart_pass/: pass.S
workloads/isa-test/: .gitignore  README.md  run_tests.sh
workloads/isa-test/common/: test_macros.S
workloads/isa-test/scripts/: gen_alu_tests.py  gen_branch_tests.py
workloads/isa-test/src/: alu.S  branch.S  branch_misaligned.S  clint.S  compare.S  csr.S  csr_all.S  ecall.S  exception.S  exception_priority.S  illegal_inst.S  jal_jalr.S  load_store.S  lui_auipc.S  mem_fault.S  mem_fault.flags  misc_priv.S  mret.S  shift.S  uart.S
workloads/rt-thread-am/bsp/abstract-machine/: .config  Makefile  extra.ld
workloads/rt-thread-am/bsp/abstract-machine/include/: ctype.h  errno.h  extra.h  fcntl.h  string.h  time.h  unistd.h  wchar.h
workloads/rt-thread-am/bsp/abstract-machine/include/sys/: errno.h  types.h
workloads/rt-thread-am/bsp/abstract-machine/src/: context.c  halt.c  hello.c  init.c  interrupt.c  libc.c  uart.c
workloads/rt-thread-am/components/drivers/serial/: serial.c
workloads/rt-thread-am/components/libc/compilers/common/: ctime.c
